--- a/ai/tags.yaml
+++ b/ai/tags.yaml
@@ -4,12 +4,15 @@ all_tags:
   - altmanai.html
   - bridgetown.html
   - tbhgemini.html
+  - ziranai.html
   altman:
   - altmanai.html
   analysis:
   - mystoic.html
   anthropology:
   - catchingfire.html
+  archaeology:
+  - firepaper.html
   atlassian:
   - altas.html
   belonging:
@@ -38,6 +41,12 @@ all_tags:
   - bloom.html
   evolution:
   - catchingfire.html
+  fire:
+  - firepaper.html
+  fire-making:
+  - firepaper.html
+  investment:
+  - ziranai.html
   leadership:
   - tbh4o.htm
   learning:
@@ -69,6 +78,8 @@ all_tags:
   - stoic.html
   pkm:
   - roamdown.html
+  primitive_skills:
+  - flintknapping.html
   productivity:
   - zettelkasten.html
   psychology:
@@ -85,20 +96,26 @@ all_tags:
   - anxiousgen.html
   - beloing.html
   - belonging.html
+  stone_tools:
+  - flintknapping.html
   stoicism:
   - mystoic.html
   - stoic.html
   survival:
   - birchbarkroll.html
   - camping.html
+  - flintknapping.html
   - fullbc.html
   - lonecraft.html
+  - mors.html
   - talkbc.html
   taxonomy:
   - bloom.html
   tools:
   - blacksmith.html
   - roamdown.html
+  trends:
+  - ziranai.html
   youth:
   - anxiousgen.html
 file_titles:
@@ -113,10 +130,13 @@ file_titles:
   bridgetown.html: AI尽职调查公司 Bridgetown Research
   camping.html: 《露营的艺术》摘要
   catchingfire.html: 《追火：烹饪如何使我们成人》摘要
+  firepaper.html: 考古出土钻木取火工具研究成果
+  flintknapping.html: 《燧石打制》精华详览
   fullbc.html: 对谈BC，字幕生成完整版
   index.html: 网页标题
   llamacon.html: LlamaCon 2025 核心速览
   lonecraft.html: 《孤立者技艺》摘要
+  mors.html: 《Bush Craft》野外生存秘籍大公开！🎉
   mystoic.html: 《过好生活指南》针对性分析
   roamdown.html: Roam的陨落 - 核心观点
   stoic.html: 《生活的哲学》核心摘要
@@ -126,6 +146,7 @@ file_titles:
   tbhgemini.html: Gemini2.5pro.脱不花：如何搞定复杂协调
   template.html: 网页标题
   zettelkasten.html: 《卡片盒笔记法原则》核心摘要
+  ziranai.html: 李自然：2025-26 AI趋势洞察
 tag_groups:
   ai:
   - ai
@@ -134,17 +155,25 @@ tag_groups:
   - meta
   - microsoft
   - openai
+  - trends
+  - investment
   bushcraft:
   - bushcraft
   - camping
   - cooking
   - crafts
+  - fire
+  - fire-making
   - nature
+  - outdoor
   - outdoors
+  - primitive_skills
   - skills
+  - stone_tools
   - survival
   mind:
   - anthropology
+  - archaeology
   - belonging
   - community
   - education
