--- a/ai/book_modernse_files/meta.yaml
+++ b/ai/book_modernse_files/meta.yaml
@@ -1,3 +1,10 @@
 datetime: '2025-08-19T16:20:42.875512+08:00'
 source: (源链接)[book_modernse_files/book.html]
 title: 《现代软件工程》核心摘要：超轻认知负荷版
+tags:
+ - se
+ - software engineering
+ - book
+attachments:
+- (中文PDF)[book.pdf]
+- (中文epub)[book.epub]
