--- a/ai/tags.yaml
+++ b/ai/tags.yaml
@@ -1148,6 +1148,7 @@ file_titles:
   book_nature_mends_us.html: 《荒野中的慰藉》摘要
   book_ryan_self_control.html: 《自律是命运》核心摘要 - 翻转卡片版
   book_scince_con.html: 📚 《意识》交互式摘要 | 卡片导航
+  book_situational_awareness.html: 《未来十年形势感知》摘要
   book_spoon_guide.html: 📚 书籍摘要：《Spoon》
   book_statistical_for_ML.html: 📚 《面向数据科学家的实用统计学》核心摘要
   book_stoic_challenge.html: 📚 《斯多葛挑战》- 动态交互核心摘要（详细版）
@@ -1314,6 +1315,7 @@ file_titles:
   tedxaifake.html: TEDx演讲摘要：AI的黑暗面
   tedxaiprogramer.html: TEDx 演讲摘要：AI 时代的软件工程
   template.html: template.html
+  tips_claude_code23.html: 榨干 Claude Code 的 23 个实用小技巧
   translatepdf.html: 让 AI 自己编写一个 PDF 翻译工具
   twlk_chromaceo.html: Latent Space 播客摘要：对话 Chroma 创始人 Jeff
   ultimatehang.html: 📚《终极悬挂》交互式摘要
@@ -1355,9 +1357,7 @@ tag_groups:
   - aise
   - alignment
   - altman
-  - anthropic
   - chatgpt
-  - claude
   - context
   - copilot
   - cot
@@ -1419,6 +1419,9 @@ tag_groups:
   - tent
   - wilderness
   - woodcraft
+  claude:
+  - anthropic
+  - claude
   mind:
   - adhd
   - analysis
