--- a/ai/book_situational_awareness_files/meta.yaml
+++ b/ai/book_situational_awareness_files/meta.yaml
@@ -1,3 +1,7 @@
 datetime: '2025-09-01T16:00:46.599530+08:00'
 source: (源链接)[book_situational_awareness_files/book.html]
 title: 《未来十年形势感知》摘要
+tags:
+- agi
+- intelligence
+- future
