--- a/ai/tags.yaml
+++ b/ai/tags.yaml
@@ -33,6 +33,7 @@ all_tags:
   - langchainceo.html
   agi:
   - anthropic_ben_agi2028.html
+  - book_situational_awareness.html
   agile:
   - basecampgettingreal.html
   ai:
@@ -282,6 +283,8 @@ all_tags:
   - claudeusing2weeks.html
   - share_claudcode_use1.html
   - talk_ccpm.html
+  - tips_claude_code.html
+  - tips_claude_code23.html
   - yt_claudecode_tips7.html
   - yt_claudecode_tips7_list.html
   cloud:
@@ -304,6 +307,8 @@ all_tags:
   - meeting_clarkai.html
   - openainewcode.html
   - share_claudcode_use1.html
+  - tips_claude_code.html
+  - tips_claude_code23.html
   - yanchuangwanwu.html
   - yt_claudecode_tips7.html
   - yt_claudecode_tips7_list.html
@@ -466,6 +471,7 @@ all_tags:
   - huberman_ADHD.html
   future:
   - aise_imagine.html
+  - book_situational_awareness.html
   - software30.html
   gear:
   - hpg.html
@@ -534,6 +540,8 @@ all_tags:
   innovation:
   - innovatordilemma.html
   - stanfordaire.html
+  intelligence:
+  - book_situational_awareness.html
   interface:
   - realtalk.html
   interview:
@@ -1018,6 +1026,8 @@ all_tags:
   timeboxing:
   - book_timeboxing.html
   tips:
+  - tips_claude_code.html
+  - tips_claude_code23.html
   - yt_claudecode_tips7.html
   tools:
   - blacksmith.html
@@ -1315,6 +1325,7 @@ file_titles:
   tedxaifake.html: TEDx演讲摘要：AI的黑暗面
   tedxaiprogramer.html: TEDx 演讲摘要：AI 时代的软件工程
   template.html: template.html
+  tips_claude_code.html: ⭐️ Claude Code 的 35 个实用技巧
   tips_claude_code23.html: 榨干 Claude Code 的 23 个实用小技巧
   translatepdf.html: 让 AI 自己编写一个 PDF 翻译工具
   twlk_chromaceo.html: Latent Space 播客摘要：对话 Chroma 创始人 Jeff
