--- a/ai/tags.yaml
+++ b/ai/tags.yaml
@@ -1948,6 +1948,7 @@ file_titles:
   yt_talk_claudecode_design.html: Claude Code 设计理念访谈摘要
   yt_talk_hinton.html: Geoffrey Hinton 访谈摘要：AI的风险与未来
   yt_talk_jira_data_center_eol.html: Atlassian Data Center EOL 公告核心摘要 (V3)
+  yt_talk_notes_duly_noteed.html: Exam Study Expert 播客摘要：笔记的艺术与科学
   yt_talk_paul_connect_with_nature_2021.html: 演讲摘要：通过荒野技能建立与自然的深刻联结
   yt_talk_paul_gbs_2025_the_nordic_way.html: 保罗·科特利访谈摘要：北欧之道 (The Nordic Way)
   yt_talk_paul_interview_mors.html: Mors Kochanski 访谈摘要 - Bushcraft 与生存哲学
