--- a/ai/book_the_ravenous_brain_files/meta.yaml
+++ b/ai/book_the_ravenous_brain_files/meta.yaml
@@ -1,3 +1,7 @@
 datetime: '2025-12-20T10:29:20.257472+08:00'
 source: (源链接)[book_the_ravenous_brain_files/book.html]
 title: 《贪婪的大脑》深度交互图谱
+tags:
+- consciousness
+- neuroscience
+- cognition
