--- a/ai/book_the_robots_rebellion_files/meta.yaml
+++ b/ai/book_the_robots_rebellion_files/meta.yaml
@@ -1,3 +1,7 @@
 datetime: '2025-12-20T10:33:35.065079+08:00'
 source: (源链接)[book_the_robots_rebellion_files/book.html]
 title: 《机器人的叛乱》交互式深度摘要
+tags:
+- rationality
+- psychology
+- evolution
