--- a/ai/book_what_intelligence_tests_miss_files/meta.yaml
+++ b/ai/book_what_intelligence_tests_miss_files/meta.yaml
@@ -1,3 +1,7 @@
 datetime: '2025-12-20T11:48:50.487073+08:00'
 source: (源链接)[book_what_intelligence_tests_miss_files/book.html]
 title: 智力测验的遗漏：理性思维心理学 - 交互式摘要
+tags:
+- rationality
+- intelligence
+- cognition
